# yarr-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  GEMINI.md  Justfile  README.md  config.example.toml  config.json  config.rustarr.toml  config.yarr.toml  deny.toml  dist.targets.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  git.yaml  install.sh  lefthook.yml  main.py  pyproject.toml  release-please-config.json  server.json  taplo.toml
.agents/plugins/: marketplace.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check-no-mcp-drift.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  docker-publish.yml  msrv.yml  openwiki-update.yml  release-please.yml  release.yml  scheduled.yml  sync-marketplace-no-mcp.yml  unraid-plugin-ci.yml  unraid-plugin-release.yml
.superpowers/sdd/: progress.md  task-12-api-uninstall-final-findings-report.md  task-12-brief.md  task-12-classic-trust-api-uninstall-report.md  task-12-exit-zero-updater-contract-report.md  task-12-final-head-review-fixes-report.md  task-12-independent-review1-fixes-report.md  task-12-independent-review2-fixes-report.md  task-12-independent-review2-followup-report.md  task-12-report.md  task-12-review1-fixes-brief.md  task-12-review1-fixes-report.md  task-12-state-tuple-validation-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-8-report.md  task-9-report.md
apps/web/: .env.example  CLAUDE.md  README.md  biome.json  components.json  next.config.ts  package.json  pnpm-lock.yaml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
config/: Dockerfile  mcporter.json
config/prometheus/: yarr-alerts.yml
docs/: AGENTS-FIRST.md  API.md  ARCHITECTURE.md  AUTH.md  CI.md  CLAUDE.md  CONFIG.md  DEPLOYMENT.md  DOCKER.md  DOCS.md  ENV.md  JUSTFILE.md  LIVE_ENDPOINT_COVERAGE.md  MCP-REGISTRY-PUBLISH-GUIDE.md  MCPORTER.md  MCP_SCHEMA.md  OBSERVABILITY.md  PATTERNS.md  PHILOSOPHY.md  PLUGINS.md  PRE-COMMIT.md  QUICKSTART.md  README.md  RUST.md  SCRIPTS.md  SYSTEMD.md  TESTING.md  TOOLS_ACTIONS_ENDPOINTS.md  WEB.md  XTASKS.md  no-mcp-variant.md
docs/contracts/: README.md  scaffold-intent.schema.json
docs/reports/: codemode-lab-alignment.md
docs/runbooks/: authentication-failures.md  dependency-response.md  deployment-rollback.md  partial-release.md  resource-pressure.md  upstream-failures.md
docs/sessions/: 2026-05-14-aurora-claude-code-theme.md  2026-05-14-aurora-colors-nginx-cleanup.md  2026-05-14-dependabot-ci-workflows.md  2026-05-14-docs-hardening-monitor-auth-watch.md  2026-05-14-justfile-plugin-version-cleanup.md  2026-05-14-plugin-hook-next16-pnpm-rollout.md  (+20 more)
openwiki/: .last-update.json  architecture.md  configuration.md  domain.md  integrations.md  operations.md  quickstart.md  testing.md
plugins/: README.md
scripts/: README.md  apply-no-mcp-marketplace  asciicheck.py  blob-size-allowlist.txt  block-env-commits.sh  build-web.sh  bump-version.sh  cargo-rustc-wrapper  check-blob-size.py  check-coupled-files.sh  check-dependency-updates.sh  check-dist-contract.js  check-file-size.sh  check-no-mcp-drift  check-openapi.py  check-plugin-hook-contract.py  check-runtime-current.sh  check-scaffold-intent-contract.py  check-schema-docs.py  check-security-exceptions.sh  check-version-sync.sh  generate-cli.sh  install.sh  live-read-smoke.sh  pre-release-check.sh  refresh-docs.sh  repair.sh  run-ascii-check.sh  sync-cargo.sh  sync-plugin-manifests.js  test-installers.js  test-mcp-auth.sh  test-plugin-distribution.js  test-plugin-http.js  test-template-features.sh  validate-plugin-layout.sh  web-watch.sh
specs/: README.md  plex.openapi.yml
src/: actions.rs  actions_tests.rs  api.rs  api_tests.rs  app.rs  app_tests.rs  capability.rs  capability_tests.rs  cli.rs  cli_tests.rs  codemode.rs  codemode_tests.rs  config.rs  config_tests.rs  create-mcp-server_v2.md  example.rs  example_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  mcp-server-testing-prompt.md  mcp.rs  mcp_tests.rs  models.rs  models_tests.rs  openapi.rs  openapi_tests.rs  run_mode.rs  run_mode_tests.rs  rustarr.rs  rustarr_tests.rs  scaffold.rs  scaffold_tests.rs  server.rs  server_tests.rs  token_limit.rs  token_limit_tests.rs  web.rs  web_tests.rs  (+2 more)
tests/: README.md  api_routes.rs  cli_parse.rs  parity.rs  plugin_contract.rs  template_invariants.rs  tool_dispatch.rs
unraid-plugin/: README.md  release-manifest.json  yarr.plg
web-ui/: README.md
xtask/: Cargo.toml  README.md
xtask/src/: ci.rs  ci_tests.rs  gen_openapi.rs  gen_openapi_tests.rs  live.rs  live_tests.rs  main.rs  patterns.rs  shart.rs  shart_tests.rs  tool_docs.rs  tool_docs_tests.rs
xtask/src/gen_openapi/: emit.rs  extract.rs  naming.rs  types.rs
xtask/src/live/: assertions.rs  cli.rs  codemode_ops.rs  contract.rs  contract_tests.rs  coverage.rs  guard.rs  http.rs  lifecycles.rs  lifecycles_tests.rs  matrix.rs  mcporter.rs  process.rs  process_tests.rs  report.rs  reset.rs  reset_tests.rs  services.rs  ssh.rs  ssh_tests.rs  suites.rs  surface.rs
xtask/src/live/contract/: fixture_args.rs  harvest.rs  invoke.rs  operations.rs  reset_ops.rs  seeding.rs  synth.rs  synth_tests.rs
xtask/src/live/contract/fixture_args/: values.rs
xtask/src/live/contract/synth/: relax.rs
xtask/src/live/coverage/: services_part1.rs  services_part2.rs
xtask/src/live/lifecycles/: services.rs
xtask/src/live/mcporter/: cases.rs  classify.rs  execution.rs  io.rs  state.rs
xtask/src/live/mcporter/cases/: arr.rs  download.rs  generic.rs  indexer.rs  media_server.rs  requests.rs  stats.rs
xtask/src/live/mcporter/classify/: domain.rs  services.rs
xtask/src/live/mcporter/state/: arr.rs  download.rs  fixtures.rs
xtask/src/patterns/: actions.rs  checks.rs  reporter.rs  surfaces.rs  util.rs
xtask/src/shart/: readiness.rs  readiness_tests.rs  status.rs  status_tests.rs
xtask/src/tool_docs/: endpoints.rs  render.rs  render_tests.rs
(+996 files in other folders)
