# =============================================================================
# Cargo.toml — Workspace root for the rustarr project
#
# This workspace contains two crates:
#   - . (the main library/binary crate)
#   - xtask/ (repo automation: dist, ci, symlink-docs, check-env)
#
# When creating your own server, rename "rustarr" and add your own
# workspace members if needed.
# =============================================================================

[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "rustarr"
version = "0.4.0"
edition = "2021"
rust-version = "1.90"
description = "MCP and CLI server for media automation fleets"
autobins = false

[[bin]]
name = "rustarr"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
  "sync",
  "time",
  "io-util",
] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.7.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
  "schemars",
] }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "1.1"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for upstream media services.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "cookies"] }

# Prometheus metrics layer for the unauthenticated /metrics endpoint.
axum-prometheus = "0.8"

# Platform dirs — for default_data_dir() (~/.rustarr detection)
dirs = "6"

# Errors
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
default = []
test-support = []

[dev-dependencies]
rustarr = { path = ".", features = ["test-support"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "1.7.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
