[project]
name = "yarr-mcp"
version = "0.1.0"
description = "A collection of MCP servers for the ARRs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.3",
    "httpx>=0.28.1",
    "plexapi>=4.17.0",
    "python-dotenv>=1.1.0",
    "qbittorrent-api>=2025.5.0",
]

[project.scripts]
plex-mcp-server = "plex_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
