# =============================================================================
# xtask/Cargo.toml — Repo automation crate
#
# Invoked via: cargo xtask <command>
#
# This crate is intentionally kept dependency-light so it compiles fast even
# on a cold cache. Do NOT add heavy crates (serde, tokio, reqwest, etc.) here.
# If you need async, use std::process::Command + shell scripts instead.
#
# Keep "xtask" as the crate name — cargo's xtask convention relies on it.
# Add dependencies only if absolutely necessary.
# =============================================================================

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
# Exclude from crates.io — this is a private automation crate.
publish = false

[dependencies]
anyhow = "1"
roxmltree = "0.21"
rustarr = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "3", default-features = false, features = ["json"] }
walkdir = "2"
